# cookiecutter

./: README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: ci.yml
